feat(evomaster): add auth, DB spec, seed users and security oracles
Rework the white-box pipeline so EvoMaster can actually enter crAPI's
business logic instead of bouncing off 401s.

CrApiCommunityController
  - getInfoForAuthentication(): register three JWT logins (alice, bob,
    mech) via /identity/api/auth/login with Bearer token extraction, so
    every EvoMaster action can call protected endpoints and the BOLA
    detector can swap IDs between Alice and Bob.
  - getDbSpecifications(): expose the live Postgres connection (schema
    "public", smart-clean disabled) so SQL taint analysis and heuristic
    INSERT generation drive branch coverage deeper.
  - resetStateOfSUT(): Postgres truncate -> Mongo drop-and-recreate ->
    re-seed three accounts with a verified BCrypt(Passw0rd!1A) hash.
    Inserts target both user_login and user_details table names to stay
    portable across crAPI versions.
  - getPackagePrefixesToCover(): enumerate controller/service/jwt/
    filter/config/utils sub-packages explicitly so auth-critical code
    paths are always counted in fitness.

run-whitebox.sh
  - Add --security, --schemaOracles, --expectationsActive,
    --taintOnSampling, --discoveredInfoRewardedInFitness and the
    diagnostic --write*/--exportCoveredTarget flags.
  - New --seed-file / --seed-format / --seed options; auto-detect a
    Postman collection at /opt/crapi/postman/ when present so mutation
    starts from realistic example requests.

setup-droplet.sh
  - Fetch the upstream crAPI Postman collection into /opt/crapi/postman/
    during one-time setup.

README.md
  - Document the three seed accounts, the new CLI flags and the
    BOLA-detection rationale for two customer tokens.

Validated locally: driver fat JAR compiles against EvoMaster 3.3.0 and
loads cleanly (3 AuthenticationDto instances registered, new package
prefix list reflected); scripts pass bash -n and shellcheck; BCrypt seed
hash verifies against the plaintext password.

End-to-end verification 